# NutriPlan4

./: .gitignore  .replit  DOCUMENTATION.md  README.md  app.py  config.py  cookies.txt  food_routes.py  index.html  models.py  process_taco.py  pyproject.toml  read_taco.py  routes.py  style.css  utils.py
attached_assets/: Presente-1 (1).xlsx  Taco.xlsx
instance/: nutriplan.db
static/css/: style.css  visual-storytelling.css
static/js/: charts.js  form-validation.js  main.js  visual-storytelling.js
templates/: base.html  consultation_detail.html  consultation_form.html  consultations.html  dashboard.html  index.html  meal_detail.html  meal_plan.html  patient_detail.html  patients.html  register.html
templates/foods/: add_meal_item.html  categories.html  category_detail.html  food_detail.html  foods.html  import_taco.html
