[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "markdown>=3.8",
    "markupsafe>=3.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
]
